--- a/imageTut.html
+++ b/imageTut.html
@@ -49,15 +49,15 @@
         <img src="makkah.jpeg" alt="Makkah" class="images left" />
 
         <p>
-          Mecca, officially Makkah al-Mukarramah (Arabic: مكة المكرمة‎,
-          romanized: Makkat al-Mukarramah, lit. 'Makkah the Noble' Hejazi
-          pronunciation: [makːa almʊkarːama]) and commonly shortened to Makkah
-          (Arabic: مكة‎, romanized: Makkah Hejazi pronunciation: [makːa]),[a] is
-          a city and administrative center of the Mecca Province of Saudi
-          Arabia, and the holiest city in Islam.[2] The city is 70 km (43 mi)
-          inland from Jeddah on the Red Sea, in a narrow valley 277 m (909 ft)
-          above sea level. Its last recorded population was 1,578,722 in
-          2015.[3] The estimated metro population in 2020 is 2.042 million,
+          New Tect addded... Mecca, officially Makkah al-Mukarramah (Arabic: مكة
+          المكرمة‎, romanized: Makkat al-Mukarramah, lit. 'Makkah the Noble'
+          Hejazi pronunciation: [makːa almʊkarːama]) and commonly shortened to
+          Makkah (Arabic: مكة‎, romanized: Makkah Hejazi pronunciation:
+          [makːa]),[a] is a city and administrative center of the Mecca Province
+          of Saudi Arabia, and the holiest city in Islam.[2] The city is 70 km
+          (43 mi) inland from Jeddah on the Red Sea, in a narrow valley 277 m
+          (909 ft) above sea level. Its last recorded population was 1,578,722
+          in 2015.[3] The estimated metro population in 2020 is 2.042 million,
           making it the third-most populated city in Saudi Arabia after Riyadh
           and Jeddah. Pilgrims more than triple this number every year during
           the Ḥajj pilgrimage, observed in the twelfth Hijri month of
